--- a/step-01/.babelrc
+++ b/step-01/.babelrc
@@ -1,8 +1,3 @@
 {
-  "presets": ["es2015", "stage-0", "react", "es2015-loose"],
-  "env": {
-    "development": {
-      "presets": ["react-hmre"]
-    }
-  }
+  "presets": ["es2015", "stage-0", "react", "es2015-loose"]
 }
