--- a/step-01/.babelrc
+++ b/step-01/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": ["es2015", "stage-0", "react", "es2015-loose"]
+  "presets": ["es2015", "stage-0", "react", "es2015-loose"],
+  "plugins": ["react-hot-loader/babel"]
 }
