--- a/step-01/package.json
+++ b/step-01/package.json
@@ -4,7 +4,10 @@
   "description": "react-base",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "clean": "rimraf dist",
+    "build:webpack": "cross-env NODE_ENV=production && webpack --config webpack-pro-config.js --progress --colors",
+    "build": "npm run clean && npm run build:webpack"
   },
   "keywords": [
     "react",
@@ -25,9 +28,12 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
+    "cross-env": "^2.0.0",
     "express": "^4.14.0",
     "html-webpack-plugin": "^2.22.0",
-    "react-hot-loader": "^1.3.0",
+    "open-browser-webpack-plugin": "0.0.2",
+    "react-hot-loader": "^3.0.0-beta.2",
+    "rimraf": "^2.5.3",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.1"
