--- a/step-01/package.json
+++ b/step-01/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "clean": "rimraf dist",
-    "build:webpack": "cross-env NODE_ENV=production && webpack --config webpack-pro-config.js --progress --colors",
+    "build:webpack": "cross-env NODE_ENV=production webpack --config webpack-pro-config.js --progress --colors",
     "build": "npm run clean && npm run build:webpack"
   },
   "keywords": [
@@ -31,7 +31,6 @@
     "cross-env": "^2.0.0",
     "express": "^4.14.0",
     "html-webpack-plugin": "^2.22.0",
-    "open-browser-webpack-plugin": "0.0.2",
     "react-hot-loader": "^3.0.0-beta.2",
     "rimraf": "^2.5.3",
     "webpack": "^1.13.1",
