--- a/step-01/.babelrc
+++ b/step-01/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["es2015", "stage-0", "react", "es2015-loose"],
+  "presets": ["es2015", "react", "es2015-loose", "stage-0"],
   "plugins": ["react-hot-loader/babel"]
 }
