--- a/step-01/package.json
+++ b/step-01/package.json
@@ -17,6 +17,7 @@
   "author": "minooo",
   "license": "MIT",
   "dependencies": {
+    "babel-polyfill": "^6.9.1",
     "react": "^15.2.1",
     "react-dom": "^15.2.1"
   },
