--- a/step-01/package.json
+++ b/step-01/package.json
@@ -32,6 +32,7 @@
     "express": "^4.14.0",
     "html-webpack-plugin": "^2.22.0",
     "react-hot-loader": "^3.0.0-beta.2",
+    "redbox-react": "^1.2.10",
     "rimraf": "^2.5.3",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
