--- a/step-02/package.json
+++ b/step-02/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^15.2.1"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.7",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
@@ -29,11 +30,14 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "cross-env": "^2.0.0",
+    "css-loader": "^0.23.1",
     "express": "^4.14.0",
     "html-webpack-plugin": "^2.22.0",
+    "postcss-loader": "^0.9.1",
     "react-hot-loader": "^3.0.0-beta.2",
     "redbox-react": "^1.2.10",
     "rimraf": "^2.5.3",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.1"
