--- a/step-02/package.json
+++ b/step-02/package.json
@@ -34,9 +34,12 @@
     "express": "^4.14.0",
     "html-webpack-plugin": "^2.22.0",
     "postcss-loader": "^0.9.1",
+    "postcss-scss": "^0.1.9",
+    "precss": "^1.4.0",
     "react-hot-loader": "^3.0.0-beta.2",
     "redbox-react": "^1.2.10",
     "rimraf": "^2.5.3",
+    "rucksack-css": "^0.8.6",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
