--- a/step-02/package.json
+++ b/step-02/package.json
@@ -22,13 +22,13 @@
     "react-dom": "^15.2.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.7",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "classnames": "^2.2.5",
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "express": "^4.14.0",
@@ -36,6 +36,7 @@
     "postcss-loader": "^0.9.1",
     "postcss-scss": "^0.1.9",
     "precss": "^1.4.0",
+    "react-css-modules": "^3.7.8",
     "react-hot-loader": "^3.0.0-beta.2",
     "redbox-react": "^1.2.10",
     "rimraf": "^2.5.3",
