--- a/step-02/package.json
+++ b/step-02/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "clean": "rimraf dist",
-    "build:webpack": "cross-env NODE_ENV=production webpack --config webpack-pro-config.js --progress --colors",
+    "build:webpack": "webpack --config webpack-pro-config.js --progress --colors",
     "build": "npm run clean && npm run build:webpack"
   },
   "keywords": [
@@ -29,10 +29,11 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "classnames": "^2.2.5",
-    "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "express": "^4.14.0",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
+    "json-loader": "^0.5.4",
     "postcss-loader": "^0.9.1",
     "postcss-scss": "^0.1.9",
     "precss": "^1.4.0",
@@ -42,6 +43,7 @@
     "rimraf": "^2.5.3",
     "rucksack-css": "^0.8.6",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.1"
