--- a/step-02/package.json
+++ b/step-02/package.json
@@ -37,6 +37,7 @@
     "postcss-loader": "^0.9.1",
     "postcss-scss": "^0.1.9",
     "precss": "^1.4.0",
+    "react-addons-css-transition-group": "^15.3.0",
     "react-css-modules": "^3.7.8",
     "react-hot-loader": "^3.0.0-beta.2",
     "redbox-react": "^1.2.10",
