--- a/step-02/package.json
+++ b/step-02/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^15.3.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.4.0",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
