--- a/step-03/package.json
+++ b/step-03/package.json
@@ -4,10 +4,11 @@
   "description": "react-base",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "npm-run-all --parallel open:src",
+    "open:src": "babel-node tools/srcServer.js",
     "clean": "rimraf dist",
     "build:webpack": "webpack --config webpack-pro-config.js --progress --colors",
-    "build": "npm run clean && npm run build:webpack"
+    "build": "npm-run-all clean build:webpack"
   },
   "keywords": [
     "react",
@@ -18,30 +19,36 @@
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "^6.9.1",
-    "react": "^15.2.1",
-    "react-dom": "^15.2.1",
-    "react-router": "^2.6.1"
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.4.0",
+    "babel-cli": "^6.11.4",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "browser-sync": "^2.14.0",
+    "chalk": "^1.1.3",
     "classnames": "^2.2.5",
+    "connect-history-api-fallback": "^1.3.0",
+    "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
+    "npm-run-all": "^2.3.0",
+    "open": "0.0.5",
     "postcss-loader": "^0.9.1",
     "postcss-scss": "^0.1.9",
     "precss": "^1.4.0",
     "react-addons-css-transition-group": "^15.3.0",
-    "react-css-modules": "^3.7.8",
     "react-hot-loader": "^3.0.0-beta.2",
+    "react-router": "^2.6.1",
     "redbox-react": "^1.2.10",
     "rimraf": "^2.5.3",
     "rucksack-css": "^0.8.6",
