--- a/step-03/package.json
+++ b/step-03/package.json
@@ -18,6 +18,7 @@
   "author": "minooo",
   "license": "MIT",
   "dependencies": {
+    "antd-mobile": "^0.7.7",
     "babel-polyfill": "^6.9.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
@@ -46,6 +47,7 @@
     "postcss-loader": "^0.9.1",
     "postcss-scss": "^0.1.9",
     "precss": "^1.4.0",
+    "rc-form": "^0.17.2",
     "react-addons-css-transition-group": "^15.3.0",
     "react-hot-loader": "^3.0.0-beta.2",
     "react-router": "^2.6.1",
