--- a/step-03/package.json
+++ b/step-03/package.json
@@ -24,10 +24,12 @@
     "react-dom": "^15.3.0"
   },
   "devDependencies": {
+    "antd-mobile": "^0.7.8",
     "autoprefixer": "^6.4.0",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-antd": "^0.5.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-react": "^6.11.1",
