--- a/step-03/package.json
+++ b/step-03/package.json
@@ -18,7 +18,7 @@
   "author": "minooo",
   "license": "MIT",
   "dependencies": {
-    "antd-mobile": "^0.8.2",
+    "antd-mobile": "^0.8.5",
     "babel-polyfill": "^6.9.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
@@ -43,9 +43,11 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
+    "less-loader": "^2.2.3",
     "npm-run-all": "^2.3.0",
     "open": "0.0.5",
     "postcss-loader": "^0.9.1",
+    "postcss-pxtorem": "^3.3.1",
     "postcss-scss": "^0.1.9",
     "precss": "^1.4.0",
     "rc-form": "^0.17.2",
