--- a/step-03/package.json
+++ b/step-03/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "react-base",
   "main": "index.js",
+  "theme": "./node_modules/kb-merchant-theme/index.js",
   "scripts": {
     "start": "npm-run-all --parallel open:src",
     "open:src": "babel-node tools/srcServer.js",
@@ -43,6 +44,7 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
+    "kb-merchant-theme": "^1.0.2",
     "less-loader": "^2.2.3",
     "npm-run-all": "^2.3.0",
     "open": "0.0.5",
