--- a/step-04/package.json
+++ b/step-04/package.json
@@ -27,7 +27,9 @@
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
-    "redux": "^3.6.0"
+    "react-router-redux": "^4.0.6",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.1",
@@ -59,6 +61,7 @@
     "react-addons-css-transition-group": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.5",
     "redbox-react": "^1.3.1",
+    "redux-logger": "^2.6.1",
     "rimraf": "^2.5.4",
     "rucksack-css": "^0.8.6",
     "style-loader": "^0.13.1",
