--- a/step-04/package.json
+++ b/step-04/package.json
@@ -26,6 +26,7 @@
     "babel-polyfill": "^6.13.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-fastclick": "^2.1.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
