--- a/step-03/package.json
+++ b/step-03/package.json
@@ -19,7 +19,7 @@
   "author": "minooo",
   "license": "MIT",
   "dependencies": {
-    "antd-mobile": "^0.8.2",
+    "antd-mobile": "0.8.2",
     "babel-polyfill": "^6.9.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
