--- a/step-04/package.json
+++ b/step-04/package.json
@@ -52,7 +52,10 @@
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
+    "humps": "^1.1.0",
     "json-loader": "^0.5.4",
+    "lodash": "^4.16.4",
+    "normalizr": "^2.2.1",
     "npm-run-all": "^3.1.0",
     "open": "0.0.5",
     "postcss-loader": "^0.13.0",
