--- a/step-04/package.json
+++ b/step-04/package.json
@@ -31,7 +31,7 @@
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
+    "redux-saga": "^0.12.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.1",
