--- a/step-04/package.json
+++ b/step-04/package.json
@@ -25,6 +25,7 @@
     "antd-mobile": "^0.9.3",
     "babel-polyfill": "^6.13.0",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.15.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-fastclick": "^2.1.2",
@@ -39,7 +40,7 @@
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
-    "babel-plugin-antd": "^0.5.1",
+    "babel-plugin-import": "^1.0.1",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.11.1",
