--- a/step-03/.babelrc
+++ b/step-03/.babelrc
@@ -2,9 +2,6 @@
   "presets": ["es2015", "react", "es2015-loose", "stage-0"],
   "plugins": [
     "react-hot-loader/babel",
-    ["antd", {
-      style: 'css',
-      libraryName: 'antd-mobile',
-    }]
+    ["import", { "style": "css", "libraryName": "antd-mobile" }]
   ]
 }
