--- a/step-03/package.json
+++ b/step-03/package.json
@@ -19,7 +19,7 @@
   "author": "minooo",
   "license": "MIT",
   "dependencies": {
-    "antd-mobile": "0.8.2",
+    "antd-mobile": "^0.9.3",
     "babel-polyfill": "^6.9.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
@@ -29,7 +29,7 @@
     "babel-cli": "^6.11.4",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
-    "babel-plugin-antd": "^0.5.1",
+    "babel-plugin-import": "^1.0.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-react": "^6.11.1",
