--- a/step-04/package.json
+++ b/step-04/package.json
@@ -6,7 +6,7 @@
   "theme": "./node_modules/kb-merchant-theme/index.js",
   "scripts": {
     "start": "npm-run-all --parallel open:src",
-    "open:src": "babel-node tools/srcServer.js",
+    "open:src": "babel-node server.js",
     "clean": "rimraf dist",
     "build:webpack": "webpack --config webpack-pro-config.js --progress --colors",
     "build": "npm-run-all clean build:webpack"
@@ -46,7 +46,6 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "browser-sync": "^2.16.0",
-    "chalk": "^1.1.3",
     "classnames": "^2.2.5",
     "connect-history-api-fallback": "^1.3.0",
     "cross-env": "^2.0.1",
