--- a/step-04/package.json
+++ b/step-04/package.json
@@ -54,6 +54,7 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "humps": "^1.1.0",
+    "iscroll": "^5.2.0",
     "json-loader": "^0.5.4",
     "lodash": "^4.16.4",
     "normalizr": "^2.2.1",
@@ -65,6 +66,7 @@
     "rc-form": "^1.0.0",
     "react-addons-css-transition-group": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-iscroll": "^1.1.1",
     "redbox-react": "^1.3.1",
     "redux-logger": "^2.6.1",
     "rimraf": "^2.5.4",
