--- a/step-03/package.json
+++ b/step-03/package.json
@@ -22,7 +22,8 @@
     "antd-mobile": "^0.9.3",
     "babel-polyfill": "^6.9.1",
     "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "react-dom": "^15.3.0",
+    "react-router": "^2.6.1",
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -51,7 +52,6 @@
     "rc-form": "^0.17.2",
     "react-addons-css-transition-group": "^15.3.0",
     "react-hot-loader": "^3.0.0-beta.3",
-    "react-router": "^2.6.1",
     "redbox-react": "^1.2.10",
     "rimraf": "^2.5.3",
     "rucksack-css": "^0.8.6",
