--- a/step-03/package.json
+++ b/step-03/package.json
@@ -23,7 +23,7 @@
     "babel-polyfill": "^6.9.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
-    "react-router": "^2.6.1",
+    "react-router": "^2.6.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
