版本维护(精简优化)

--- a/step-04/package.json
+++ b/step-04/package.json
@@ -26,8 +26,8 @@
     "babel-polyfill": "^6.13.0",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.15.1",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "react": "15.3.2",
+    "react-dom": "15.3.2",
     "react-fastclick": "^2.1.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
