--- a/step-01/package.json
+++ b/step-01/package.json
@@ -18,8 +18,8 @@
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "^6.9.1",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "react": "15.3.2",
+    "react-dom": "15.3.2"
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
@@ -30,7 +30,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "express": "^4.14.0",
     "html-webpack-plugin": "^2.22.0",
-    "react-hot-loader": "^3.0.0-beta.3",
+    "react-hot-loader": "^3.0.0-beta.6",
     "redbox-react": "^1.2.10",
     "rimraf": "^2.5.3",
     "webpack": "^1.13.1",
