--- a/step-03/package.json
+++ b/step-03/package.json
@@ -21,8 +21,8 @@
   "dependencies": {
     "antd-mobile": "^0.9.3",
     "babel-polyfill": "^6.9.1",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0",
+    "react": "15.3.2",
+    "react-dom": "15.3.2",
     "react-router": "^2.6.1"
   },
   "devDependencies": {
@@ -51,7 +51,7 @@
     "precss": "^1.4.0",
     "rc-form": "^0.17.2",
     "react-addons-css-transition-group": "^15.3.0",
-    "react-hot-loader": "^3.0.0-beta.3",
+    "react-hot-loader": "^3.0.0-beta.6",
     "redbox-react": "^1.2.10",
     "rimraf": "^2.5.3",
     "rucksack-css": "^0.8.6",
