--- a/step-02/package.json
+++ b/step-02/package.json
@@ -32,6 +32,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "browser-sync": "^2.17.5",
+    "chokidar": "^1.6.1",
     "classnames": "^2.2.5",
     "connect-history-api-fallback": "^1.3.0",
     "cross-env": "^2.0.0",
