--- a/step-03/package.json
+++ b/step-03/package.json
@@ -19,11 +19,11 @@
   "author": "minooo",
   "license": "MIT",
   "dependencies": {
-    "antd-mobile": "^0.9.3",
+    "antd-mobile": "^0.9.9",
     "babel-polyfill": "^6.9.1",
     "react": "15.3.2",
     "react-dom": "15.3.2",
-    "react-router": "^2.6.1"
+    "react-router": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -36,6 +36,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "browser-sync": "^2.14.0",
+    "chokidar": "^1.6.1",
     "classnames": "^2.2.5",
     "connect-history-api-fallback": "^1.3.0",
     "cross-env": "^2.0.0",
