--- a/step-04/package.json
+++ b/step-04/package.json
@@ -30,7 +30,7 @@
     "react-dom": "15.3.2",
     "react-fastclick": "^2.1.2",
     "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
+    "react-router": "^3.0.0",
     "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
     "redux-saga": "^0.12.0"
@@ -46,6 +46,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "browser-sync": "^2.16.0",
+    "chokidar": "^1.6.1",
     "classnames": "^2.2.5",
     "connect-history-api-fallback": "^1.3.0",
     "cross-env": "^2.0.1",
