--- a/step-03/.babelrc
+++ b/step-03/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["es2015", "react", "es2015-loose", "stage-0"],
+  "presets": [["es2015", { "loose": true}], "react", "stage-0"],
   "plugins": [
     "react-hot-loader/babel",
     ["import", { "style": "css", "libraryName": "antd-mobile" }]
