--- a/step-04/.babelrc
+++ b/step-04/.babelrc
@@ -1,7 +1,21 @@
 {
-  "presets": [["es2015", { "loose": true}], "react", "stage-0"],
+  "presets": [
+    ["latest", {
+      "es2015": {
+        "loose": true
+      }
+    }],
+    "react",
+    "stage-0"
+  ],
   "plugins": [
     "react-hot-loader/babel",
-    ["import", { "style": "css", "libraryName": "antd-mobile" }]
+    ["import", { "style": "css", "libraryName": "antd-mobile" }],
+    ["transform-runtime", {
+      "helpers": false,
+      "polyfill": true,
+      "regenerator": true,
+      "moduleName": "babel-runtime"
+    }]
   ]
 }
