--- a/step-01/.babelrc
+++ b/step-01/.babelrc
@@ -1,6 +1,20 @@
 {
-  "presets": [["es2015", { "loose": true}], "react", "stage-0"],
-  // stage-0 一定要放在最右边。这样组件中才可以直接用state，而不是放在construct里
-
-  "plugins": ["react-hot-loader/babel"]
+  "presets": [
+    ["latest", {
+      "es2015": {
+        "loose": true
+      }
+    }],
+    "react",
+    "stage-0"
+  ],
+  "plugins": [
+    "react-hot-loader/babel",
+    ["transform-runtime", {
+      "helpers": false,
+      "polyfill": true,
+      "regenerator": true,
+      "moduleName": "babel-runtime"
+    }]
+  ]
 }
