--- a/step-01/package.json
+++ b/step-01/package.json
@@ -17,14 +17,15 @@
   "author": "minooo",
   "license": "MIT",
   "dependencies": {
-    "babel-polyfill": "^6.9.1",
-    "react": "15.3.2",
-    "react-dom": "15.3.2"
+    "babel-runtime": "^6.20.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "express": "^4.14.0",
