--- a/step-02/package.json
+++ b/step-02/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "step-01",
+  "name": "step-02",
   "version": "1.0.0",
   "description": "react-base",
   "main": "index.js",
@@ -18,16 +18,17 @@
   "author": "minooo",
   "license": "MIT",
   "dependencies": {
-    "babel-polyfill": "^6.9.1",
-    "react": "15.3.2",
-    "react-dom": "15.3.2"
+    "babel-runtime": "^6.20.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "browser-sync": "^2.17.5",
