--- a/step-03/package.json
+++ b/step-03/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "step-01",
+  "name": "step-03",
   "version": "1.0.0",
   "description": "react-base",
   "main": "index.js",
-  "theme": "./node_modules/kb-merchant-theme/index.js",
+  "theme": "",
   "scripts": {
     "start": "npm-run-all --parallel open:src",
     "open:src": "babel-node server.js",
@@ -19,10 +19,10 @@
   "author": "minooo",
   "license": "MIT",
   "dependencies": {
-    "antd-mobile": "^0.9.9",
-    "babel-polyfill": "^6.9.1",
-    "react": "15.3.2",
-    "react-dom": "15.3.2",
+    "antd-mobile": "^0.9.12",
+    "babel-runtime": "^6.20.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "react-router": "^3.0.0"
   },
   "devDependencies": {
@@ -31,7 +31,8 @@
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-import": "^1.0.1",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "browser-sync": "^2.14.0",
