--- a/step-04/package.json
+++ b/step-04/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "react react-router redux",
   "main": "index.js",
-  "theme": "./node_modules/kb-merchant-theme/index.js",
+  "theme": "",
   "scripts": {
     "start": "npm-run-all --parallel open:src",
     "open:src": "babel-node server.js",
@@ -22,16 +22,15 @@
   "author": "minooo",
   "license": "MIT",
   "dependencies": {
-    "antd-mobile": "^0.9.9",
-    "babel-polyfill": "^6.13.0",
+    "antd-mobile": "^0.9.12",
+    "babel-runtime": "^6.20.0",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.15.1",
-    "react": "15.3.2",
-    "react-dom": "15.3.2",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "react-fastclick": "^2.1.2",
-    "react-redux": "^4.4.5",
+    "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
-    "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
     "redux-saga": "^0.12.0"
   },
@@ -41,7 +40,8 @@
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-import": "^1.0.1",
-    "babel-preset-es2015": "^6.14.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "browser-sync": "^2.16.0",
