--- a/step-04/.babelrc
+++ b/step-04/.babelrc
@@ -13,7 +13,7 @@
     ["import", { "style": "css", "libraryName": "antd-mobile" }],
     ["transform-runtime", {
       "helpers": false,
-      "polyfill": true,
+      "polyfill": false,
       "regenerator": true,
       "moduleName": "babel-runtime"
     }]
