--- a/step-05-geek/package.json
+++ b/step-05-geek/package.json
@@ -72,7 +72,7 @@
     "rucksack-css": "^0.8.6",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
+    "webpack": "2.2.0-rc.1",
     "webpack-dev-middleware": "^1.8.2",
     "webpack-hot-middleware": "^2.12.2"
   }
