--- a/step-05-geek/.babelrc
+++ b/step-05-geek/.babelrc
@@ -2,7 +2,8 @@
   "presets": [
     ["latest", {
       "es2015": {
-        "loose": true
+        "loose": true,
+        "modules": false
       }
     }],
     "react",
