--- a/step-05-geek/package.json
+++ b/step-05-geek/package.json
@@ -73,6 +73,7 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0-rc.1",
+    "webpack-dev-server": "2.2.0-rc.0",
     "webpack-dev-middleware": "^1.8.2",
     "webpack-hot-middleware": "^2.12.2"
   }
