--- a/step-05-geek/.babelrc
+++ b/step-05-geek/.babelrc
@@ -1,6 +1,11 @@
 {
   "presets": [
-    "latest",
+    ["latest", {
+      "es2015": {
+        "loose": true,
+        "modules": false
+      }
+    }],
     "react",
     "stage-0"
   ],
