--- a/step-05-geek/package.json
+++ b/step-05-geek/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "theme": "",
   "scripts": {
-    "start": "npm-run-all --parallel open:src",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --open --config webpack-dev-config.js",
+    "start11": "npm-run-all --parallel open:src",
     "open:src": "babel-node server.js",
     "clean": "rimraf dist",
     "build:webpack": "webpack --config webpack-pro-config.js --progress --colors",
@@ -44,7 +45,7 @@
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
-    "browser-sync": "^2.16.0",
+    "browser-sync": "^2.18.5",
     "chokidar": "^1.6.1",
     "classnames": "^2.2.5",
     "connect-history-api-fallback": "^1.3.0",
@@ -74,7 +75,7 @@
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0-rc.1",
     "webpack-dev-server": "2.2.0-rc.0",
-    "webpack-dev-middleware": "^1.8.2",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack-dev-middleware": "^1.9.0",
+    "webpack-hot-middleware": "^2.13.2"
   }
 }
