“版本配置升级”

--- a/step-01/.babelrc
+++ b/step-01/.babelrc
@@ -1,10 +1,6 @@
 {
   "presets": [
-    ["latest", {
-      "es2015": {
-        "loose": true
-      }
-    }],
+    ["env", {"modules": false}],
     "react",
     "stage-0"
   ],
