--- a/step-01/package.json
+++ b/step-01/package.json
@@ -17,23 +17,23 @@
   "author": "minooo",
   "license": "MIT",
   "dependencies": {
-    "babel-runtime": "^6.20.0",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "babel-runtime": "^6.23.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-latest": "^6.16.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "express": "^4.14.0",
-    "html-webpack-plugin": "^2.22.0",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "express": "^4.14.1",
+    "html-webpack-plugin": "^2.28.0",
     "react-hot-loader": "^3.0.0-beta.6",
-    "redbox-react": "^1.2.10",
-    "rimraf": "^2.5.3",
-    "webpack": "^1.13.1",
+    "redbox-react": "^1.3.3",
+    "rimraf": "^2.5.4",
+    "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.1"
   }
