--- a/step-01/package.json
+++ b/step-01/package.json
@@ -36,6 +36,7 @@
     "webpack": "^2.2.1",
     "webpack-dashboard": "^0.3.0",
     "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.17.0"
+    "webpack-hot-middleware": "^2.17.0",
+    "webpack-md5-hash": "^0.0.5"
   }
 }
