--- a/step-01/package.json
+++ b/step-01/package.json
@@ -4,8 +4,7 @@
   "description": "react-base",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "start2": "webpack-dev-server --config webpack-dev-config.js --open",
+    "start": "webpack-dev-server --config webpack-dev-config.js --open",
     "clean": "rimraf dist",
     "build:webpack": "webpack --config webpack-pro-config.js --progress",
     "build": "npm run clean && npm run build:webpack"
@@ -13,7 +12,7 @@
   "keywords": [
     "react",
     "es6",
-    "webpack"
+    "webpack 2.2+"
   ],
   "author": "minooo",
   "license": "MIT",
@@ -29,16 +28,10 @@
     "babel-preset-env": "^1.1.8",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
-    "express": "^4.14.1",
     "html-webpack-plugin": "^2.28.0",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "redbox-react": "^1.3.3",
     "rimraf": "^2.5.4",
     "webpack": "^2.2.1",
-    "webpack-dashboard": "^0.3.0",
-    "webpack-dev-middleware": "^1.10.0",
     "webpack-dev-server": "^2.4.1",
-    "webpack-hot-middleware": "^2.17.0",
     "webpack-md5-hash": "^0.0.5"
   }
 }
