--- a/step-02/package.json
+++ b/step-02/package.json
@@ -18,42 +18,37 @@
   "author": "minooo",
   "license": "MIT",
   "dependencies": {
-    "babel-runtime": "^6.20.0",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "babel-runtime": "^6.23.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "babel-cli": "^6.11.4",
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-latest": "^6.16.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "browser-sync": "^2.17.5",
-    "chokidar": "^1.6.1",
-    "classnames": "^2.2.5",
+    "autoprefixer": "^6.7.6",
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.4.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.2.1",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "browser-sync": "^2.18.8",
     "connect-history-api-fallback": "^1.3.0",
-    "cross-env": "^2.0.0",
-    "css-loader": "^0.23.1",
-    "express": "^4.14.0",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.22.0",
-    "json-loader": "^0.5.4",
-    "npm-run-all": "^2.3.0",
-    "postcss-loader": "^0.9.1",
-    "postcss-scss": "^0.1.9",
-    "precss": "^1.4.0",
-    "react-addons-css-transition-group": "^15.3.0",
+    "css-loader": "^0.26.2",
+    "express": "^4.15.2",
+    "file-loader": "^0.10.1",
+    "html-webpack-plugin": "^2.28.0",
+    "npm-run-all": "^4.0.2",
+    "node-sass": "4.5.0",
+    "postcss-loader": "^1.3.3",
+    "react-addons-css-transition-group": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.6",
-    "redbox-react": "^1.2.10",
-    "rimraf": "^2.5.3",
-    "rucksack-css": "^0.8.6",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.1"
+    "redbox-react": "^1.3.4",
+    "rimraf": "^2.6.1",
+    "sass-loader": "6.0.2",
+    "style-loader": "^0.13.2",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.1"
   }
 }
