--- a/step-02/package.json
+++ b/step-02/package.json
@@ -37,8 +37,8 @@
     "express": "^4.15.2",
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
-    "npm-run-all": "^4.0.2",
     "node-sass": "4.5.0",
+    "npm-run-all": "^4.0.2",
     "postcss-loader": "^1.3.3",
     "react-addons-css-transition-group": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.6",
@@ -49,6 +49,7 @@
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.17.1"
+    "webpack-hot-middleware": "^2.17.1",
+    "webpack-md5-hash": "^0.0.5"
   }
 }
