--- a/step-02/.babelrc
+++ b/step-02/.babelrc
@@ -1,16 +1,22 @@
 {
   "presets": [
-    ["env", {"modules": false}],
+    ["env", {"modules": false, "loose": true}],
     "react",
     "stage-0"
   ],
   "plugins": [
-    "react-hot-loader/babel",
     ["transform-runtime", {
       "helpers": false,
       "polyfill": false,
       "regenerator": true,
       "moduleName": "babel-runtime"
     }]
-  ]
+  ],
+  "env": {
+    "development": {
+      "plugins": [
+        "react-hot-loader/babel"
+      ]
+    }
+  }
 }
